adding windows to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# Created by https://www.gitignore.io/api/c,windows
+# Edit at https://www.gitignore.io/?templates=c,windows
+
+### C ###
 # Prerequisites
 *.d
 
@@ -50,3 +55,30 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.gitignore.io/api/c,windows
